[package]
name = "web3"
version = "0.20.0"
description = "Ethereum JSON-RPC client."
homepage = "https://github.com/tomusdrw/rust-web3"
repository = "https://github.com/tomusdrw/rust-web3"
documentation = "https://docs.rs/web3"
license = "MIT"
keywords = ["jsonrpc", "web3", "ethereum", "rpc", "client"]
authors = ["Tomasz Drwięga <tomasz@parity.io>"]
readme = "README.md"
edition = "2018"

[dependencies]
arrayvec = "0.7.6"
derive_more = "0.99.18"
ethabi = "18.0.0"
ethereum-types = "0.14.1"
futures = "0.3.31"
futures-timer = "3.0.3"
hex = "0.4"
idna = "0.5"
jsonrpc-core = "18.0.0"
log = "0.4.17"
parking_lot = "0.12.3"
rlp = "0.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
pin-project = "1.1.6"
# Optional deps
secp256k1 = { version = "0.30", features = ["recovery"], optional = true }
once_cell = { version = "1.20.2", optional = true }

## HTTP
base64 = { version = "0.22", optional = true }
bytes = { version = "1", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = [
  "json",
] }
headers = { version = "0.4", optional = true }

## WS
# async-native-tls = { git = "https://github.com/async-email/async-native-tls.git", rev = "b5b5562d6cea77f913d4cbe448058c031833bf17", optional = true, default-features = false }
# Temporarily use forked version released to crates.io
async-native-tls = { package = "web3-async-native-tls", version = "0.4", optional = true, default-features = false }
tokio-rustls = { version = "0.26", optional = true }
rustls-pki-types = { version = "1", optional = true }
webpki-roots = { version = "0.26", optional = true }
async-std = { version = "1.13", optional = true }
tokio = { version = "1.40", optional = true, features = ["full"] }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7", optional = true, features = ["compat", "io"] }
soketto = { version = "0.8", optional = true }
## Shared (WS, HTTP)
url = { version = "2.5", optional = true }
## EIP-1193
js-sys = { version = "0.3.72", optional = true }
### This is a transitive dependency, only here so we can turn on its wasm_bindgen feature

getrandom = { version = "0.2", features = ["js"], optional = true }
rand = { version = "0.8.5", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.95", optional = true }
wasm-bindgen-futures = { version = "0.4.45", optional = true }

[dev-dependencies]
# For examples
env_logger = "0.11"
hex-literal = "0.4"
wasm-bindgen-test = "0.3.19"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
hyper = { version = "1.5.0", default-features = false, features = ["server"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }

[features]


default = ["http-tls", "signing", "ws-tls-tokio", "ipc-tokio"]
wasm = [
  "futures-timer/wasm-bindgen",
  "getrandom",
  "js-sys",
  "rand",
  "serde-wasm-bindgen",
  "wasm-bindgen",
  "wasm-bindgen-futures",
]
eip-1193 = ["wasm"]
_http_base = ["reqwest", "bytes", "url", "base64"]
http = ["_http_base"]
http-tls = ["http", "reqwest/default-tls"]
http-native-tls = ["http", "reqwest/native-tls"]
http-rustls-tls = ["http", "reqwest/rustls-tls"]
signing = ["secp256k1", "once_cell"]
ws-tokio = ["soketto", "url", "tokio", "tokio-util", "headers"]
ws-async-std = ["soketto", "url", "async-std", "headers"]
ws-tls-tokio = [
  "async-native-tls",
  "async-native-tls/runtime-tokio",
  "ws-tokio",
]
ws-rustls-tokio = [
  "tokio-rustls",
  "webpki-roots",
  "rustls-pki-types",
  "ws-tokio",
]
ws-tls-async-std = [
  "async-native-tls",
  "async-native-tls/runtime-async-std",
  "ws-async-std",
]
ipc-tokio = ["tokio", "tokio-stream", "tokio-util"]
arbitrary_precision = [
  "serde_json/arbitrary_precision",
  "jsonrpc-core/arbitrary_precision",
]
test = []
allow-missing-fields = []

[workspace]
